Adiciona link 'Cadastro na Fila' no menu lateral de todas as páginas

--- a/avisos.html
+++ b/avisos.html
@@ -83,6 +83,7 @@
       <a class="drawer-item" href="index.html">Início</a>
       <a class="drawer-item" href="avisos.html">Avisos</a>
       <a class="drawer-item" href="painel.html">Fila</a>
+      <a class="drawer-item" href="cadastro.html" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 800;">📋 Cadastro na Fila</a>
 
       <a class="drawer-item" href="mailto:odontologiajaperi@gmail.com">Contato (e-mail)</a>
     </nav>
