Adiciona card de destaque para cadastro na fila na página inicial

--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
         </div>
       </section>
 
+      <!-- Card de Destaque: Cadastro na Fila -->
+      <section class="highlight-card action-card" data-target="cadastro.html" aria-labelledby="cadastroTitle" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-color: #667eea;">
+          <h3 id="cadastroTitle" style="color: white;">📋 Faça seu Cadastro na Fila!</h3>
+          <p class="lead" style="color: rgba(255,255,255,0.95);">Entre na fila de espera para atendimento odontológico. O cadastro é rápido e simples. <strong style="color: white;">Clique aqui para se cadastrar agora!</strong></p>
+      </section>
+
       <section class="highlight-card action-card" data-target="avisos.html" aria-labelledby="avisosTitle">
           <h3 id="avisosTitle">⚠️ Destaque: Avisos e Comunicados Importantes</h3>
           <p class="lead">Consulte a área de avisos para informações sobre funcionamento, mudanças de horário ou comunicados urgentes da saúde bucal de Japeri. **Clique aqui para ver o último aviso!**</p>
