--- a/consulta-fila.html
+++ b/consulta-fila.html
@@ -457,7 +457,9 @@
         function formatarData(data) {
             if (!data) return '-';
             const d = new Date(data);
-            return d.toLocaleDateString('pt-BR');
+            const dataFormatada = d.toLocaleDateString('pt-BR');
+            const horaFormatada = d.toLocaleTimeString('pt-BR', {hour: '2-digit', minute: '2-digit'});
+            return `${dataFormatada} às ${horaFormatada}`;
         }
 
         // Função para formatar mês
