--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
       <a class="drawer-item" href="consulta-fila.html">🔍 Consultar Fila</a>
       <a class="drawer-item" href="cadastro.html" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 800;">📋 Cadastro na Fila</a>
 
+      <a class="drawer-item" href="#" onclick="event.preventDefault(); mostrarDuvidasDocumentos(); document.getElementById('sideDrawer').classList.remove('open'); document.getElementById('drawerOverlay').classList.remove('show');">📄 Dúvidas sobre Documentos</a>
       <a class="drawer-item" href="mailto:odontologiajaperi@gmail.com">Contato (e-mail)</a>
     </nav>
   </aside>
@@ -286,7 +287,10 @@
       const mo = new MutationObserver(()=>{ hideOtherOverlays(); setExpanded(drawer.classList.contains('open')); });
       mo.observe(drawer, { attributes:true, attributeFilter:['class'] });
     })();
-  </script>
+    function mostrarDuvidasDocumentos() {
+    alert("📄 DOCUMENTOS NECESSÁRIOS PARA O ATENDIMENTO\n\nPara ser atendido, você precisará apresentar:\n\n• Documento de identificação com foto (RG, CNH ou Carteira de Trabalho)\n• Cartão do SUS (Cartão Nacional de Saúde)\n• CPF\n• Comprovante de residência atualizado\n\nIMPORTANTE:\n• Todos os documentos devem estar originais ou com cópia autenticada\n• Menores de 18 anos devem estar acompanhados de responsável legal\n\nOBSERVAÇÕES:\n• A falta de qualquer documento pode impedir o atendimento\n• Chegue com 15 minutos de antecedência\n• Em caso de dúvidas: odontologiajaperi@gmail.com");
+  }
+</script>
 
   <script>
     (function(){
