--- a/avisos.html
+++ b/avisos.html
@@ -60,8 +60,8 @@
         <h1>Avisos e Comunicados</h1>
         <div class="avisos-list" id="avisosList">
           <div class="aviso">
-            <div class="aviso-title">Nenhum aviso cadastrado</div>
-            <div class="muted small">Use esta área futuramente para publicar comunicados.</div>
+            <div class="aviso-title">Não realizamos cobranças para marcação de consultas! O SUS é gratuito.</div>
+            <div class="muted small">Nosso contato é feito através do WhatsApp pelo perfil verificado no numero (21)97521-5959. Este não é um canal interativo! Para dúvidas, o contato deve ser feito pelo e-mail odontologiajaperi@gmail.com</div>
           </div>
         </div>
       </section>
