--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
       
       <section class="cards-row">
         <div class="card">
-          <h3>O que você pode fazer aqui</h3>
+          <h3>Avisos ⚠️ </h3>
           <ul class="short-list">
-            <li>Consultar o painel completo</li>
-            <li>Acessar avisos e comunicados</li>
-            <li>Acompanhar total de pacientes em espera e agendados</li>
+            <li>Não realizamos cobranças para marcação de consultas! O SUS é gratuito.</li>
+            <li>Nosso contato é feito através do WhatsApp pelo perfil verificado no numero (21)97521-5959</li>
+            <li>WhasApp não é um canal interativo! Para dúvidas, o contato deve ser feito pelo e-mail odontologiajaperi@gmail.com
+</li>
           </ul>
         </div>
 
