--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       
       <section class="cards-row">
         <div class="card">
-          <h3>Avisos ⚠️ </h3>
+          <h3>Atenção ❗ </h3>
           <ul class="short-list">
             <li>Não realizamos cobranças para marcação de consultas! O SUS é gratuito.</li>
             <li>Nosso contato é feito através do WhatsApp pelo perfil verificado no numero (21)97521-5959</li>
