Corrigir ortografia: temporáriamente → temporariamente

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             
             // Mudar conteúdo
             cadastroCard.innerHTML = `
-              <h3 style="color: white;">❌ Cadastros Temporáriamente Fechados</h3>
+              <h3 style="color: white;">❌ Cadastros Temporariamente Fechados</h3>
               <p class="lead" style="color: rgba(255,255,255,0.95);">${mensagemConfig?.valor || 'Os cadastros estão temporariamente fechados. Em breve abriremos novas vagas.'}</p>
             `;
             
