--- a/cadastro.html
+++ b/cadastro.html
@@ -410,7 +410,7 @@
         <div class="form-container">
             <!-- Aviso quando cadastros estão fechados -->
             <div id="avisoFechado" style="display:none;background:linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);color:white;padding:20px;border-radius:15px;margin-bottom:20px;text-align:center;box-shadow:0 4px 12px rgba(231,76,60,0.3)">
-                <h2 style="margin:0 0 10px;font-size:1.5em">❌ Cadastros Temporáriamente Fechados</h2>
+                <h2 style="margin:0 0 10px;font-size:1.5em">❌ Cadastros Temporariamente Fechados</h2>
                 <p id="mensagemFechado" style="margin:0;font-size:1.1em;line-height:1.5"></p>
                 <a href="index.html" style="display:inline-block;margin-top:15px;padding:12px 24px;background:white;color:#e74c3c;border-radius:8px;text-decoration:none;font-weight:700">← Voltar para Início</a>
             </div>
