Adicionar página de fluxograma com 4 imagens
- Criar fluxograma.html com design responsivo e modal
- Adicionar link no menu lateral de todas as páginas
- Adicionar card azul no index entre atenção e dúvidas
- Imagens clicáveis com visualização ampliada
- Grid responsivo (1 coluna mobile, 2 colunas desktop)

--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
         </div>
       </section>
 
+      <!-- Card de Destaque: Fluxograma -->
+      <section class="highlight-card action-card" data-target="fluxograma.html" aria-labelledby="fluxogramaTitle" style="background: linear-gradient(135deg, #00b4db 0%, #0083b0 100%); border-color: #00b4db; margin-top: 30px;">
+          <h3 id="fluxogramaTitle" style="color: white;">📊 Fluxograma do Atendimento</h3>
+          <p class="lead" style="color: rgba(255,255,255,0.95);">Entenda o processo completo de atendimento odontológico. <strong style="color: white;">Clique aqui para visualizar o fluxograma!</strong></p>
+      </section>
+
       <!-- Card de Destaque: Dúvidas sobre Documentos -->
       <section class="highlight-card action-card" onclick="mostrarDuvidasDocumentos()" aria-labelledby="duvidasTitle" style="background: linear-gradient(135deg, #ffc107 0%, #ff9800 100%); border-color: #ffc107; cursor: pointer; margin-top: 30px;">
           <h3 id="duvidasTitle" style="color: white;">📄 Dúvidas sobre Documentos?</h3>
@@ -195,7 +201,7 @@
       <a class="drawer-item" href="painel.html">Fila</a>
       <a class="drawer-item" href="consulta-fila.html">🔍 Consultar Fila</a>
       <a class="drawer-item" id="menuCadastro" href="cadastro.html" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 800;">📋 Cadastro na Fila</a>
-
+      <a class="drawer-item" href="fluxograma.html">📊 Fluxograma</a>
       <a class="drawer-item" href="#" onclick="event.preventDefault(); mostrarDuvidasDocumentos(); document.getElementById('sideDrawer').classList.remove('open'); document.getElementById('drawerOverlay').classList.remove('show');">📄 Dúvidas sobre Documentos</a>
       <a class="drawer-item" href="mailto:odontologiajaperi@gmail.com">Contato (e-mail)</a>
     </nav>
