--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <main>
       <section class="hero-card" aria-labelledby="welcomeTitle">
         <div class="hero-content">
-          <h2 id="welcomeTitle">Bem-vindo ao Sistema de Fila de Espera Odontológica</h2>
-          <p class="lead">Gerencie sua posição na fila de atendimento odontológico de Japeri. Cadastre-se, consulte sua posição e acompanhe seu agendamento.</p>
+          <h2 id="welcomeTitle">Bem-vindo a saúde bucal de Japeri.</h2>
+          <p class="lead">Cadastre-se, consulte sua posição, acompanhe seu agendament, consulte avisos e retire dúvidas.</p>
         </div>
 
         <div class="hero-illustration" aria-hidden="true">
