--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <main>
       <section class="hero-card" aria-labelledby="welcomeTitle">
         <div class="hero-content">
-          <h2 id="welcomeTitle">Bem-vindo a saúde bucal de Japeri.</h2>
-          <p class="lead">Cadastre-se, consulte sua posição, acompanhe seu agendament, consulte avisos e retire dúvidas.</p>
+          <h2 id="welcomeTitle">Seja bem-vindo à Saúde Bucal de Japeri 🦷🪥</h2>
+          <p class="lead">or aqui você pode: consultar nossos endereços, fazer o cadastro para as consultas, consultar sua posição na fila, ficar atento aos nossos avisos e entrar em contato por nosso e-mail.</p>
         </div>
 
         <div class="hero-illustration" aria-hidden="true">
