--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <section class="hero-card" aria-labelledby="welcomeTitle">
         <div class="hero-content">
           <h2 id="welcomeTitle">Seja bem-vindo à Saúde Bucal de Japeri 🦷🪥</h2>
-          <p class="lead">or aqui você pode: consultar nossos endereços, fazer o cadastro para as consultas, consultar sua posição na fila, ficar atento aos nossos avisos e entrar em contato por nosso e-mail.</p>
+          <p class="lead">Por aqui você pode: consultar nossos endereços, fazer o cadastro para as consultas, consultar sua posição na fila, ficar atento aos nossos avisos e entrar em contato por nosso e-mail.</p>
         </div>
 
         <div class="hero-illustration" aria-hidden="true">
