Adicionar página de unidades com botões inteligentes
- Criar unidades.html com endereços de todas as equipes
- Botões mudam de cor: roxo (aberto) e vermelho (fechado)
- Botões levam para cadastro com unidade pré-selecionada
- Cadastro.html aceita parâmetro ?unidade= na URL
- Adicionar link no menu de todas as páginas
- Cards diferenciados para CEO e Unidade Móvel

--- a/avisos.html
+++ b/avisos.html
@@ -86,6 +86,7 @@
       <a class="drawer-item" href="consulta-fila.html">🔍 Consultar Fila</a>
       <a class="drawer-item" id="menuCadastro" href="cadastro.html" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 800;">📋 Cadastro na Fila</a>
       <a class="drawer-item" href="fluxograma.html">📊 Fluxograma</a>
+      <a class="drawer-item" href="unidades.html">📍 Unidades</a>
       <a class="drawer-item" href="#" onclick="event.preventDefault(); mostrarDuvidasDocumentos(); document.getElementById('sideDrawer').classList.remove('open'); document.getElementById('drawerOverlay').classList.remove('show');">📄 Dúvidas sobre Documentos</a>
       <a class="drawer-item" href="mailto:odontologiajaperi@gmail.com">Contato (e-mail)</a>
     </nav>
