--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <ul class="short-list">
             <li>Não realizamos cobranças para marcação de consultas! O SUS é gratuito.</li>
             <li>Nosso contato é feito através do WhatsApp pelo perfil verificado no numero (21)97521-5959</li>
-            <li>WhasApp não é um canal interativo! Para dúvidas, o contato deve ser feito pelo e-mail odontologiajaperi@gmail.com
+            <li>WhatsApp não é um canal interativo! Para dúvidas, o contato deve ser feito pelo e-mail odontologiajaperi@gmail.com
 </li>
           </ul>
         </div>
