Corrigir pré-seleção de unidades no cadastro
- Ajustar nomes das unidades para corresponder ao select
- Adicionar opção CEO no formulário de cadastro
- Melhorar lógica de correspondência (exata + parcial)
- Adicionar logs para debug
- Corrigir URLs dos botões em unidades.html

--- a/unidades.html
+++ b/unidades.html
@@ -171,7 +171,7 @@
       <div class="unidade-card">
         <h2 class="unidade-titulo">🏥 Equipe CEMES Japeri</h2>
         <p class="unidade-endereco">📍 Av. Dr. Arruda Negreiros, 48 – Centro</p>
-        <a href="cadastro.html?unidade=CEMES%20Japeri" class="btn-cadastro" data-unidade="CEMES Japeri">
+        <a href="cadastro.html?unidade=Japeri%20Centro" class="btn-cadastro" data-unidade="Japeri Centro">
           📋 Faça o Cadastro Nesta Unidade
         </a>
       </div>
@@ -210,7 +210,7 @@
           <p><strong>Localização:</strong> CEMES Engenheiro Pedreira (posto do Mucajá)</p>
           <p><strong>Endereço:</strong> Avenida Tancredo Neves, s/n - Parque Mucajá, Japeri - RJ, 26420-243</p>
         </div>
-        <a href="cadastro.html?unidade=CEO%20Japeri" class="btn-cadastro" data-unidade="CEO Japeri">
+        <a href="cadastro.html?unidade=CEO" class="btn-cadastro" data-unidade="CEO">
           📋 Faça o Cadastro Nesta Unidade
         </a>
       </div>
@@ -226,7 +226,7 @@
           <p>• <strong>Marajoara:</strong> na rua da Granado</p>
           <p>• <strong>Beira Rio:</strong> ao lado da escola</p>
         </div>
-        <a href="cadastro.html?unidade=Unidade%20M%C3%B3vel" class="btn-cadastro" data-unidade="Unidade Móvel">
+        <a href="cadastro.html?unidade=Unidade%20Odontol%C3%B3gica%20m%C3%B3vel" class="btn-cadastro" data-unidade="Unidade Odontológica móvel">
           📋 Faça o Cadastro Nesta Unidade
         </a>
       </div>
