--- a/unidades.html
+++ b/unidades.html
@@ -171,9 +171,7 @@
       <div class="unidade-card">
         <h2 class="unidade-titulo">🏥 Equipe CEMES Japeri</h2>
         <p class="unidade-endereco">📍 Av. Dr. Arruda Negreiros, 48 – Centro</p>
-        <a href="cadastro.html?unidade=Japeri%20Centro" class="btn-cadastro" data-unidade="Japeri Centro">
-          📋 Faça o Cadastro Nesta Unidade
-        </a>
+        <p class="unidade-endereco">📍 Para atendimento nesta unidade, é necessário encaminhamento da equipe de Saúde Bucal (eSB)</p>
       </div>
 
       <!-- Equipe Chacrinha -->
