Adicionar card de Unidades no index
- Card verde entre Fluxograma e Dúvidas sobre Documentos
- Gradiente verde (#1DC56F → #17a85a)
- Link direto para página de unidades
- Mantém padrão visual dos outros cards

--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
           <p class="lead" style="color: rgba(255,255,255,0.95);">Entenda o processo completo de atendimento odontológico. <strong style="color: white;">Clique aqui para visualizar o fluxograma!</strong></p>
       </section>
 
+      <!-- Card de Destaque: Unidades -->
+      <section class="highlight-card action-card" data-target="unidades.html" aria-labelledby="unidadesTitle" style="background: linear-gradient(135deg, #1DC56F 0%, #17a85a 100%); border-color: #1DC56F; margin-top: 30px;">
+          <h3 id="unidadesTitle" style="color: white;">📍 Endereços das Unidades</h3>
+          <p class="lead" style="color: rgba(255,255,255,0.95);">Encontre a unidade de saúde bucal mais próxima de você e faça seu cadastro. <strong style="color: white;">Clique aqui para ver todos os endereços!</strong></p>
+      </section>
+
       <!-- Card de Destaque: Dúvidas sobre Documentos -->
       <section class="highlight-card action-card" onclick="mostrarDuvidasDocumentos()" aria-labelledby="duvidasTitle" style="background: linear-gradient(135deg, #ffc107 0%, #ff9800 100%); border-color: #ffc107; cursor: pointer; margin-top: 30px;">
           <h3 id="duvidasTitle" style="color: white;">📄 Dúvidas sobre Documentos?</h3>
