--- a/unidades.html
+++ b/unidades.html
@@ -171,7 +171,9 @@
       <div class="unidade-card">
         <h2 class="unidade-titulo">🏥 Equipe CEMES Japeri</h2>
         <p class="unidade-endereco">📍 Av. Dr. Arruda Negreiros, 48 – Centro</p>
-        <p class="unidade-endereco">📍 Para atendimento nesta unidade, é necessário encaminhamento da equipe de Saúde Bucal (eSB)</p>
+         <a href="cadastro.html?unidade=Alecrim" class="btn-cadastro" data-unidade="CEMES Japeri">
+          📋 Faça o Cadastro Nesta Unidade
+         </a>
       </div>
 
       <!-- Equipe Chacrinha -->
@@ -208,9 +210,7 @@
           <p><strong>Localização:</strong> CEMES Engenheiro Pedreira (posto do Mucajá)</p>
           <p><strong>Endereço:</strong> Avenida Tancredo Neves, s/n - Parque Mucajá, Japeri - RJ, 26420-243</p>
         </div>
-        <a href="cadastro.html?unidade=CEO" class="btn-cadastro" data-unidade="CEO">
-          📋 Faça o Cadastro Nesta Unidade
-        </a>
+        <p class="unidade-endereco">📍 Para atendimento nesta unidade, é necessário encaminhamento da equipe de Saúde Bucal (eSB)</p>
       </div>
 
       <!-- Unidade Odontológica Móvel -->
