--- a/fluxograma.html
+++ b/fluxograma.html
@@ -162,9 +162,9 @@
 
     <main>
       <section class="card">
-        <h1 style="font-size: 2em; margin-bottom: 10px; color: var(--brand);">📊 Fluxograma do Atendimento</h1>
+        <h1 style="font-size: 2em; margin-bottom: 10px; color: var(--brand);">📊Fluxograma de atendimento das equipes de Saúde Bucal e especialidades do CEO</h1>
         <p style="color: var(--muted); font-size: 1.1em; line-height: 1.6;">
-          Confira abaixo o fluxograma completo do processo de atendimento odontológico. 
+          Entenda o processo completo para o atendimento odontológico e as especialidades atendidas pelo Centro de Especialidades Odontológicas (CEO).
           Clique em qualquer imagem para visualizar em tamanho maior.
         </p>
         
