Forçar reload do modal-documentos.js com versão
- Adicionar ?v=2 em todas as páginas
- Força navegadores a recarregar o arquivo atualizado
- Evita cache antigo com informações desatualizadas

--- a/avisos.html
+++ b/avisos.html
@@ -159,6 +159,6 @@
     })();
   </script>
 
-  <script src="modal-documentos.js"></script>
+  <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
