--- a/consulta-fila.html
+++ b/consulta-fila.html
@@ -481,6 +481,6 @@
         // Focar no campo CPF ao carregar
         document.getElementById('cpf').focus();
     </script>
-  <script src="modal-documentos.js"></script>
+  <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
