--- a/cadastro.html
+++ b/cadastro.html
@@ -959,6 +959,6 @@
         })();
     </script>
 
-  <script src="modal-documentos.js"></script>
+  <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
