--- a/fluxograma.html
+++ b/fluxograma.html
@@ -319,6 +319,6 @@
     })();
   </script>
 
-  <script src="modal-documentos.js"></script>
+  <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
