--- a/index.html
+++ b/index.html
@@ -407,6 +407,6 @@
     })();
   </script>
 
-  <script src="modal-documentos.js"></script>
+  <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
