Melhorias no sistema de gestantes (v2.1.0)
✨ Novas funcionalidades:
- Bloquear checkbox gestante para sexo masculino
- Validar data do parto (deve ser posterior a hoje)
- Card de destaque para gestantes no index.html
- Link no menu lateral de todas as páginas
- Botão para download da cartilha após cadastro

🔧 Alterações técnicas:
- Checkbox desabilitado até selecionar sexo
- Data mínima configurada para amanhã
- Modal modificado para aceitar botão extra
- Estilo rosa/vermelho para elementos de gestantes

📝 Documentação:
- Adicionado MELHORIAS_GESTANTES.md com guia completo

--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
           <p class="lead">Consulte a área de avisos para informações sobre funcionamento, mudanças de horário ou comunicados urgentes da saúde bucal de Japeri. **Clique aqui para ver o último aviso!**</p>
       </section>
       
+      <!-- Card de Destaque para Gestantes -->
+      <section class="highlight-card" onclick="window.location.href='cadastro.html'" style="background: linear-gradient(135deg, #fff3f3 0%, #ffe6f0 100%); border: 2px solid #ff6b9d; box-shadow: 0 4px 16px rgba(255, 107, 157, 0.2);" aria-labelledby="gestantesTitle">
+        <h3 id="gestantesTitle" style="color: #c41e3a;">🤰 Atenção Gestantes!</h3>
+        <p class="lead" style="color: #8b1538;">
+          <strong>Você está grávida?</strong> Faça seu cadastro e receba a <strong>Cartilha da Gestante</strong> com informações importantes sobre saúde bucal durante a gestação. <strong>Clique aqui para se cadastrar!</strong>
+        </p>
+      </section>
+      
       <section class="cards-row">
         <div class="card">
           <h3>Atenção ❗ </h3>
@@ -207,6 +215,7 @@
       <a class="drawer-item" href="painel.html">Fila</a>
       <a class="drawer-item" href="consulta-fila.html">🔍 Consultar Fila</a>
       <a class="drawer-item" id="menuCadastro" href="cadastro.html" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 800;">📋 Cadastro na Fila</a>
+      <a class="drawer-item" href="cadastro.html" style="background: linear-gradient(135deg, #ff6b9d 0%, #c41e3a 100%); color: white; font-weight: 800;">🤰 Gestantes: Cadastro e Cartilha</a>
       <a class="drawer-item" href="fluxograma.html">📊 Fluxograma</a>
       <a class="drawer-item" href="unidades.html">📍 Unidades</a>
       <a class="drawer-item" href="#" onclick="event.preventDefault(); mostrarDuvidasDocumentos(); document.getElementById('sideDrawer').classList.remove('open'); document.getElementById('drawerOverlay').classList.remove('show');">📄 Dúvidas sobre Documentos</a>
