--- a/fluxograma.html
+++ b/fluxograma.html
@@ -222,6 +222,7 @@
       <a class="drawer-item" href="painel.html">Fila</a>
       <a class="drawer-item" href="consulta-fila.html">🔍 Consultar Fila</a>
       <a class="drawer-item" id="menuCadastro" href="cadastro.html" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-weight: 800;">📋 Cadastro na Fila</a>
+      <a class="drawer-item" href="cadastro.html" style="background: linear-gradient(135deg, #ff6b9d 0%, #c41e3a 100%); color: white; font-weight: 800;">🤰 Gestantes: Cadastro e Cartilha</a>
       <a class="drawer-item" href="fluxograma.html">📊 Fluxograma</a>
       <a class="drawer-item" href="unidades.html">📍 Unidades</a>
       <a class="drawer-item" href="#" onclick="event.preventDefault(); mostrarDuvidasDocumentos(); document.getElementById('sideDrawer').classList.remove('open'); document.getElementById('drawerOverlay').classList.remove('show');">📄 Dúvidas sobre Documentos</a>
