Sistema de Avaliação de Atendimento (v1.0.0)
⭐ Novo sistema completo de avaliação de atendimento

📱 Botão Flutuante (estilo 'spam'):
- Canto inferior direito em cadastro.html e consulta-fila.html
- Animações pulse e bounce para chamar atenção
- Tooltip 'Avalie seu atendimento!'

💳 Cards de Destaque:
- Adicionados em index.html e unidades.html
- Estilo verde claro com borda verde
- Texto: 'Já foi atendido? Sua opinião é muito importante!'

📝 Modal de Avaliação Completo:
- Formulário com validação
- Sistema de estrelas (1-5) para 4 categorias
- NPS (Net Promoter Score) de 0-10
- Campos de feedback textual
- Máscaras automáticas para CPF e celular

🗄️ Banco de Dados:
- Nova tabela 'avaliacoes' com 17 campos
- Políticas RLS configuradas
- Função de análise de médias por unidade
- Índices otimizados para consultas

📊 Recursos:
- sql_tabela_avaliacoes.sql - Script completo
- avaliacao-component.html - Componente reutilizável
- avaliacao-card-component.html - Card para páginas
- SISTEMA_AVALIACAO.md - Documentação completa

🎨 Design:
- Cores verde/azul do tema
- Responsivo (mobile e desktop)
- Animações suaves
- Acessibilidade (ARIA labels)

--- a/consulta-fila.html
+++ b/consulta-fila.html
@@ -481,6 +481,17 @@
         // Focar no campo CPF ao carregar
         document.getElementById('cpf').focus();
     </script>
+  <!-- Componente de Avaliação -->
+  <script>
+    // Incluir componente de avaliação
+    fetch("avaliacao-component.html")
+      .then(response => response.text())
+      .then(html => {
+        const div = document.createElement("div");
+        div.innerHTML = html;
+        document.body.appendChild(div);
+      });
+  </script>
   <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
