Sistema de Avaliação V2.0 - Simplificado e Inteligente
⭐ NOVO SISTEMA COMPLETO DE AVALIAÇÃO

📄 Página Dedicada (avaliacao.html):
- Formulário simplificado com 6 campos
- CPF, Data, Unidade, Dentista, Nota (0-10), Comentário
- Design verde/azul com estrela animada
- Modal de sucesso com redirecionamento

🎪 Pop-up Inteligente com Balão Estilo HQ:
- Balão de diálogo estilo história em quadrinhos
- Estrela animada com bounce
- Aparece automaticamente:
  * Na primeira visita (após 3 segundos)
  * A cada 2 minutos de navegação
- Botão X para fechar
- Não reaparece na mesma sessão

🗄️ Nova Tabela Simplificada:
- 8 campos (vs 17 da versão anterior)
- Estrutura otimizada e focada
- Script SQL que dropa tabela antiga e cria nova
- Políticas RLS configuradas
- 2 funções SQL para análise

📱 Integração em TODAS as Páginas:
- avisos.html
- cadastro.html
- consulta-fila.html
- fluxograma.html
- index.html
- painel.html
- termos.html
- unidades.html

🧠 Lógica Inteligente:
- localStorage para controlar intervalo de 2 minutos
- sessionStorage para não reexibir na mesma sessão
- Não aparece na página de avaliação
- Fecha com X ou ESC

📊 Recursos:
- sql_nova_tabela_avaliacoes.sql - Script completo
- avaliacao.html - Página dedicada
- avaliacao-popup.html - Componente reutilizável
- SISTEMA_AVALIACAO_V2.md - Documentação completa

🎨 Design:
- Cores verde/azul do tema
- Balão estilo HQ com borda preta
- Animações suaves e chamativas
- Totalmente responsivo

❌ Removido:
- Botão flutuante antigo
- Cards antigos
- Sistema complexo anterior
- Componentes não utilizados

--- a/cadastro.html
+++ b/cadastro.html
@@ -1267,10 +1267,10 @@
         })();
     </script>
 
-  <!-- Componente de Avaliação -->
+  <script src="modal-documentos.js?v=2"></script>
+  <!-- Pop-up de Avaliação -->
   <script>
-    // Incluir componente de avaliação
-    fetch("avaliacao-component.html")
+    fetch("avaliacao-popup.html")
       .then(response => response.text())
       .then(html => {
         const div = document.createElement("div");
@@ -1278,6 +1278,5 @@
         document.body.appendChild(div);
       });
   </script>
-  <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
