--- a/avisos.html
+++ b/avisos.html
@@ -161,5 +161,15 @@
   </script>
 
   <script src="modal-documentos.js?v=2"></script>
+  <!-- Pop-up de Avaliação -->
+  <script>
+    fetch("avaliacao-popup.html")
+      .then(response => response.text())
+      .then(html => {
+        const div = document.createElement("div");
+        div.innerHTML = html;
+        document.body.appendChild(div);
+      });
+  </script>
 </body>
 </html>
