--- a/consulta-fila.html
+++ b/consulta-fila.html
@@ -481,10 +481,10 @@
         // Focar no campo CPF ao carregar
         document.getElementById('cpf').focus();
     </script>
-  <!-- Componente de Avaliação -->
+  <script src="modal-documentos.js?v=2"></script>
+  <!-- Pop-up de Avaliação -->
   <script>
-    // Incluir componente de avaliação
-    fetch("avaliacao-component.html")
+    fetch("avaliacao-popup.html")
       .then(response => response.text())
       .then(html => {
         const div = document.createElement("div");
@@ -492,6 +492,5 @@
         document.body.appendChild(div);
       });
   </script>
-  <script src="modal-documentos.js?v=2"></script>
 </body>
 </html>
